--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <div>:</div>
                 <div class="sec">00</div>
             </div>
-            <div class="gmt">Asia/Saigon [GMT+7]</div>
+            <div class="gmt">Produced By Kris [GMT+7]</div>
         </div>
     </header>
     <script>
